--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <div>
         <h2><%= blog.title %></h2>
         <img src="<%= blog.image %>">
-        <span><%= blog.created %></span>
-        <p><%= blog.body.substring(0, 100) %>...</p>
+        <span><%= blog.created.toDateString() %></span>
+        <p><%= blog.body.substring(0, 100) %> ...</p>
         <a href="/blogs/<%= blog._id %>">Read More</a>
     </div>
 <% }) %>
