--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,6 +10,10 @@
             <div class="description">
                 <p><%= blog.body %></p>
             </div>
+            <a href="/blogs/<%= blog._id %>/edit" class="ui blue basic button">Edit Post</a>
+            <form id="buttonInline" method="POST" action="/blogs/<%= blog._id %>?_method=DELETE">
+                <button class="ui red basic button">Delete Post</button>
+            </form>
         </div>
     </div>
 
