--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,7 +8,7 @@
                 <span><%= blog.created.toDateString() %></span>
             </div>
             <div class="description">
-                <p><%= blog.body %></p>
+                <p><%- blog.body %></p>
             </div>
             <a href="/blogs/<%= blog._id %>/edit" class="ui blue basic button">Edit Post</a>
             <form id="buttonInline" method="POST" action="/blogs/<%= blog._id %>?_method=DELETE">
